--- a/globe.html
+++ b/globe.html
@@ -44,30 +44,45 @@
  <div id="cesiumContainer"></div>
 
  <div class="backdrop" id="menu">
-     <span><strong>h3</strong></span>
+     <span><strong>Uber h3</strong></span>
      <br>
      <br>
      <div class="h3">
-             <div class="btn-group" role="group" aria-label="First group">
-                 <button type="button" class="btn btn-secondary" onclick="onClick('h3','0')">0</button>
-                 <button type="button" class="btn btn-secondary" onclick="onClick('h3','1')">1</button>
-                 <button type="button" class="btn btn-secondary" onclick="onClick('h3','2')">2</button>
-                 <button type="button" class="btn btn-secondary" onclick="onClick('h3','3')">3</button>
+             <div class="btn-group" role="group">
+                 <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false" autocomplete="off"  onclick="onLayerButtonClick('h3','0')">0</button>
+                 <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false" autocomplete="off" onclick="onLayerButtonClick('h3','1')">1</button>
+                 <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false" autocomplete="off" onclick="onLayerButtonClick('h3','2')">2</button>
+                 <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false" autocomplete="off" onclick="onLayerButtonClick('h3','3')">3</button>
              </div>
      </div>
-     <span><strong>s2</strong></span>
+     <span><strong>Google s2</strong></span>
      <br>
      <br>
      <div class="s2">
-         <div class="btn-group" role="group" aria-label="First group">
-             <button type="button" class="btn btn-secondary" onclick="onClick('s2','0')">0</button>
-             <button type="button" class="btn btn-secondary" onclick="onClick('s2','1')">1</button>
-             <button type="button" class="btn btn-secondary" onclick="onClick('s2','2')">2</button>
-             <button type="button" class="btn btn-secondary" onclick="onClick('s2','3')">3</button>
-             <button type="button" class="btn btn-secondary" onclick="onClick('s2','4')">4</button>
-             <button type="button" class="btn btn-secondary" onclick="onClick('s2','5')">5</button>
+             <div class="btn-group" role="group">
+             <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false" autocomplete="off" onclick="onLayerButtonClick('s2','0')">0</button>
+             <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false" autocomplete="off" onclick="onLayerButtonClick('s2','1')">1</button>
+             <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false" autocomplete="off" onclick="onLayerButtonClick('s2','2')">2</button>
+             <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false" autocomplete="off" onclick="onLayerButtonClick('s2','3')">3</button>
+             <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false" autocomplete="off" onclick="onLayerButtonClick('s2','4')">4</button>
+             <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false" autocomplete="off" onclick="onLayerButtonClick('s2','5')">5</button>
          </div>
      </div>
+     <br>
+     <span><strong>RiskAware</strong></span>
+     <br>
+     <br>
+     <div class="eaggrT">
+         <div class="btn-group" role="group">
+             <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false" autocomplete="off" onclick="onLayerButtonClick('eaggrt','0')">0</button>
+             <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false" autocomplete="off" onclick="onLayerButtonClick('eaggrt','1')">1</button>
+             <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false" autocomplete="off" onclick="onLayerButtonClick('eaggrt','2')">2</button>
+             <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false" autocomplete="off" onclick="onLayerButtonClick('eaggrt','3')">3</button>
+             <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false" autocomplete="off" onclick="onLayerButtonClick('eaggrt','4')">4</button>
+             <button type="button" class="btn btn-secondary" data-toggle="button" aria-pressed="false" autocomplete="off" onclick="onLayerButtonClick('eaggrt','5')">5</button>
+         </div>
+     </div>
+
  </div>
  </body>
  </html>
